--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.1.4",
+    "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "eventproxy": "^0.3.5",
     "express": "^4.14.0",
+    "log4js": "^1.0.1",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.5",
     "request": "^2.79.0"
